css/style.scss
---
---

// - - - - - - - - - - Foundations

@import "_reset";
@import "_mixins";
@import "_plugins";



// - - - - - - - - - - Variables


// Colors

$background-color: {{ site.data.settings.color_settings.background_color }};
$background-alt-color: {{ site.data.settings.color_settings.background_alt_color }};
$border-color: {{ site.data.settings.color_settings.border_color }};

$text-dark-color: {{ site.data.settings.color_settings.text_dark_color }};
$text-medium-color: {{ site.data.settings.color_settings.text_medium_color }};
$text-light-color: {{ site.data.settings.color_settings.text_light_color }};

$accent-color: {{ site.data.settings.color_settings.accent_color }};

$overlay-background-color: {{ site.data.settings.color_settings.overlay_background_color }};
$overlay-text-color: {{ site.data.settings.color_settings.overlay_text_color }};

$error-color: {{ site.data.settings.color_settings.error_color }};


// Fonts

$body-font: {{ site.data.settings.font_settings.body_font }};
$title-font: {{ site.data.settings.font_settings.title_font }};

$regular-weight: {{ site.data.settings.font_settings.regular_weight }};
$bold-weight: {{ site.data.settings.font_settings.bold_weight }};


// Typography

$sitetitle-small: {{ site.data.settings.font_settings.site_title.small_size }}px;
$sitetitle-medium: {{ site.data.settings.font_settings.site_title.medium_size }}px;
$sitetitle-large: {{ site.data.settings.font_settings.site_title.large_size }}px;
$sitetitle-weight: {{ site.data.settings.font_settings.site_title.weight }};
$sitetitle-spacing: {{ site.data.settings.font_settings.site_title.letter_spacing }}em;

$sitetagline-small: {{ site.data.settings.font_settings.site_tagline.small_size }}px;
$sitetagline-medium: {{ site.data.settings.font_settings.site_tagline.medium_size }}px;
$sitetagline-large: {{ site.data.settings.font_settings.site_tagline.large_size }}px;
$sitetagline-weight: {{ site.data.settings.font_settings.site_tagline.weight }};
$sitetagline-spacing: {{ site.data.settings.font_settings.site_tagline.letter_spacing }}em;
$sitetagline-lineheight: {{ site.data.settings.font_settings.site_tagline.line_height }};

$menu-small: {{ site.data.settings.font_settings.menu.small_size }}px;
$menu-medium: {{ site.data.settings.font_settings.menu.medium_size }}px;
$menu-large: {{ site.data.settings.font_settings.menu.large_size }}px;
$menu-weight: {{ site.data.settings.font_settings.menu.weight }};
$menu-spacing: {{ site.data.settings.font_settings.menu.letter_spacing }}em;

$h1-small: {{ site.data.settings.font_settings.h1.small_size }}px;
$h1-medium: {{ site.data.settings.font_settings.h1.medium_size }}px;
$h1-large: {{ site.data.settings.font_settings.h1.large_size }}px;
$h1-weight: {{ site.data.settings.font_settings.h1.weight }};
$h1-spacing: {{ site.data.settings.font_settings.h1.letter_spacing }}em;
$h1-lineheight: {{ site.data.settings.font_settings.h1.line_height }};

$h2-small: {{ site.data.settings.font_settings.h2.small_size }}px;
$h2-medium: {{ site.data.settings.font_settings.h2.medium_size }}px;
$h2-large: {{ site.data.settings.font_settings.h2.large_size }}px;
$h2-weight: {{ site.data.settings.font_settings.h2.weight }};
$h2-spacing: {{ site.data.settings.font_settings.h2.letter_spacing }}em;
$h2-lineheight: {{ site.data.settings.font_settings.h2.line_height }};

$h3-small: {{ site.data.settings.font_settings.h3.small_size }}px;
$h3-medium: {{ site.data.settings.font_settings.h3.medium_size }}px;
$h3-large: {{ site.data.settings.font_settings.h3.large_size }}px;
$h3-weight: {{ site.data.settings.font_settings.h3.weight }};
$h3-spacing: {{ site.data.settings.font_settings.h3.letter_spacing }}em;
$h3-lineheight: {{ site.data.settings.font_settings.h3.line_height }};

$h4-small: {{ site.data.settings.font_settings.h4.small_size }}px;
$h4-medium: {{ site.data.settings.font_settings.h4.medium_size }}px;
$h4-large: {{ site.data.settings.font_settings.h4.large_size }}px;
$h4-weight: {{ site.data.settings.font_settings.h4.weight }};
$h4-spacing: {{ site.data.settings.font_settings.h4.letter_spacing }}em;
$h4-lineheight: {{ site.data.settings.font_settings.h4.line_height }};

$h5-small: {{ site.data.settings.font_settings.h5.small_size }}px;
$h5-medium: {{ site.data.settings.font_settings.h5.medium_size }}px;
$h5-large: {{ site.data.settings.font_settings.h5.large_size }}px;
$h5-weight: {{ site.data.settings.font_settings.h5.weight }};
$h5-spacing: {{ site.data.settings.font_settings.h5.letter_spacing }}em;
$h5-lineheight: {{ site.data.settings.font_settings.h5.line_height }};

$h6-small: {{ site.data.settings.font_settings.h6.small_size }}px;
$h6-medium: {{ site.data.settings.font_settings.h6.medium_size }}px;
$h6-large: {{ site.data.settings.font_settings.h6.large_size }}px;
$h6-weight: {{ site.data.settings.font_settings.h6.weight }};
$h6-spacing: {{ site.data.settings.font_settings.h6.letter_spacing }}em;
$h6-lineheight: {{ site.data.settings.font_settings.h6.line_height }};

$p-small: {{ site.data.settings.font_settings.p.small_size }}px;
$p-medium: {{ site.data.settings.font_settings.p.medium_size }}px;
$p-large: {{ site.data.settings.font_settings.p.large_size }}px;
$p-weight: {{ site.data.settings.font_settings.p.weight }};
$p-spacing: {{ site.data.settings.font_settings.p.letter_spacing }}em;
$p-lineheight: {{ site.data.settings.font_settings.p.line_height }};

$blockquote-small: {{ site.data.settings.font_settings.blockquote.small_size }}px;
$blockquote-medium: {{ site.data.settings.font_settings.blockquote.medium_size }}px;
$blockquote-large: {{ site.data.settings.font_settings.blockquote.large_size }}px;
$blockquote-weight: {{ site.data.settings.font_settings.blockquote.weight }};
$blockquote-spacing: {{ site.data.settings.font_settings.blockquote.letter_spacing }}em;
$blockquote-lineheight: {{ site.data.settings.font_settings.blockquote.line_height }};

$button-weight: {{ site.data.settings.font_settings.buttons.weight }};
$button-spacing: {{ site.data.settings.font_settings.buttons.letter_spacing }}em;


// Header
$overlay-opacity: {{ site.data.settings.header_settings.overlay_opacity }};


// Logo
$logo-width: {{ site.data.settings.header_settings.logo_width }}px;
$footer-logo-width: {{ site.data.settings.footer_settings.logo_width }}px;


// Grid item
$grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;

// - - - - - - - - - - Global styles

@import "_basic";

@import "_includes/_header";
@import "_includes/_footer";

@import "_includes/_content";
@import "_includes/_socials";
@import "_includes/_gallery";
@import "_includes/_syntax";
@import "_includes/_contact-form";

// - - - - - - - - - - Section styles

@import "_includes/_portfolio";
@import "_includes/_blog";

.image-wrap img {
  border-radius: 100px;
  width:25%;
}
.resume-pdf {
  font-size: 20px;
  margin: 0 0 8px 0;
  :hover {
    color: #ff8c73;
    text-decoration: underline;
  }
}
h4.section-title { margin: 13px 0 0 0;}
hr.resume-divider { margin: 0 0 8px 0; }
.title-pos {
  color:#000000;
  margin: 10px 0 10px 0;
}
.position {
  color: #000;
  font-weight: 900;
}
.company-year { font-style: oblique; }
.edu-tails { color: #000000; }
.skills-set { line-height: 25px; }
.job-details { line-height: 20px; }
.box-1 {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding-bottom: 2.25%;
  width: 100%;
}
.box-1 img {
  background-size: cover;
  height: 240px;
  width: 260px;
}
.projects-portfolio { color:#000000; }
ul.post-list {
  list-style-type: none;
  font-size: 25px;
}
.project-title { padding-left: 28px; }
svg { margin-right: 6px; }
.image-project { margin: 0 0 15px 0; }
.project-description {
  font-size: 16px;
  margin: 0 0 15px 0;
  padding: 20px;
}
.project-count {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
  min-height: 100%;
}
.project-count > div {
  display: flex;
  flex-basis: calc(50% - 40px);
  flex-direction: column;
  justify-content: center;
}
.project-count > div > div {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 10px;
}
.images00,.images1,.images2, .images3,
.images4,.images5,.images6 {
  background-size: cover;
  height: 220px;
  width: 100%;
}
span.position {
  font-size: 18px;
}
p.header__tagline { display: none; }
.header-overlay { background-color: #b44343; }
.links { height: 200px; }
.headshot {
  border-radius: 100px;
  width:25%;
}
.menu { text-align: center; }
ul.menu__list { margin-top: 120px }

@include mq(tabletl) {
  .menu { text-align: left; }
  ul.menu__list { margin-top: 0 }
  .box-1 img {
    height: 254px;
    width: 380px;
  }
  .project-title {
    position: relative;
    right: 32px;
  }
}

